# CLibIntegrationJava

./: README.md
CLibIntegration/: settings.gradle
CLibIntegration/app/: build.gradle
CLibIntegration/app/src/androidTest/java/com/example/clibintegration/: ExampleInstrumentedTest.java
CLibIntegration/app/src/main/: AndroidManifest.xml
CLibIntegration/app/src/main/java/com/example/clibintegration/: MainActivity.java
CLibIntegration/app/src/main/jni/: CMakeLists.txt  native-lib.c
CLibIntegration/app/src/main/res/layout/: activity_main.xml
CLibIntegration/app/src/main/res/values/: strings.xml  themes.xml
CLibIntegration/app/src/main/res/values-night/: themes.xml
CLibIntegration/app/src/test/java/com/example/clibintegration/: ExampleUnitTest.java
CLibIntegration/gradle/wrapper/: gradle-wrapper.properties
